# HackASU

./: .gitignore  CONTRIBUTING.md  DASHBOARD_SYNC.md  DEMO_SRS_TEMPLATE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  REAL_TIME_DATA_IMPLEMENTATION.md  TEST_MCP_DASHBOARD.md  TEST_SRS_PROCESSING.md  test_srs_processing.sh
.github/workflows/: ci.yml
backend/: README.md  anthropic_client.py  main.py  requirements.txt  schemas.py  test_api_key.py
backend/app/: __init__.py  config.py  models.py
backend/app/middleware/: error_handler.py
backend/app/routes/: ai.py  anomalies.py  chat.py  dashboard.py  issues.py  narratives.py  srs.py  stats.py
backend/app/services/: ai_service.py  auth_service.py  github_service.py  jira_service.py  srs_service.py
front-end/: README.md
front-end/backend/: __init__.py  anthropic_client.py  main.py  requirements.txt
front-end/frontend/: package-lock.json  package.json
front-end/frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AnomalyDetector.tsx  Chatbot.module.css  Chatbot.tsx  CommitNarrative.tsx  Dashboard.tsx  Header.tsx  IssueCard.tsx  ProjectStats.tsx  SprintCard.tsx  SrsSprintPlanner.tsx  UserStoryCard.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: api.ts  contextStorage.ts  pageScraper.ts
frontend/src/types/: global.d.ts
mcp-servers/: README.md
mcp-servers/github-mcp/: README.md  mcp.json.example  pyproject.toml  setup.sh
mcp-servers/github-mcp/github_mcp/: __init__.py  cli.py  client.py  server.py
mcp-servers/hackasu_mcp/: .gitignore  README.md  __init__.py  cli.py  client.py  mcp.json.example  pyproject.toml  server.py
mcp-servers/jira-mcp/: README.md  mcp.json.example  pyproject.toml  requirements.txt  setup.sh
mcp-servers/jira-mcp/jira_mcp/: __init__.py  cli.py  client.py  server.py
mock_data/: mcp_mock_data.json  tickets_to_create.json
scripts/: commit_plan.json  generate_commits.ps1  generate_commits.sh
