[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-mcp"
version = "0.1.0"
description = "Jira MCP Server - Model Context Protocol integration for Jira API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "HackASU Team" }]
requires-python = ">=3.10"
keywords = ["mcp", "jira", "model-context-protocol", "project-management", "atlassian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "loguru>=0.7.0",
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Sdunga1/HackASU"
Documentation = "https://github.com/Sdunga1/HackASU/blob/main/mcp-servers/jira-mcp/README.md"
Repository = "https://github.com/Sdunga1/HackASU.git"

[project.scripts]
jira-mcp = "jira_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jira_mcp"]

